# aula16_python_jornada

./: README.md  pyproject.toml  start.py
contracts/: schema.py
data/: products.csv
