[project]
name = "aula16-python-jornada"
version = "0.1.0"
description = ""
authors = [
    {name = "WesleyPenteado",email = "wesleycosta.ne@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "faker (>=40.11.0,<41.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
